2005-08-16  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkdialog.xml (add_buttons): Fix description of how button
	data is passed to the method.

2005-08-12  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml ("drag-data-get"): Fix typo. Fixes #313351
	(Nikos Kouremenos)

2005-08-09  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkscale.xml (set_digits): Note that if "draw-value" is FALSE
	set_digits() has no effect. (Steve Langer)

2005-07-27  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkrcstyle.xml (Styles description): Add info about style
	property.

	* pygtk-gtkwidget.xml
	* pygtk-gtk-functions (widget_class_list_style_properties): Fix
	incorrectly named function.

2005-07-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktextbuffer.xml:  Explicitly identify params that are
	TextIters. Fixes #308835. (Nikos Kouremenos)

	* pygtk-gtknotebook.xml (switch-page): Add missing param descriptions.
	Fixes #311283 (Nikos Kouremenos)

	* pygtk-gtktreemodelsort.xml
	* pygtk-gtktreemodelfilter
	* pygtk-gtkliststore.xml
	* pygtk-gtktreestore.xml
	* pygtk-gtktreemodel.xml (Description): Add reference to tutorial and
	TreeModel description of Python protocol support.

2005-07-21  John Finlay  <finlay@moeraki.com>

	* pygtk-pangocolor.xml (pango.Color): remove parse() method and replace
	with pango.Colo()r constructor.

2005-07-19  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkwindow.xml (various): Reference GDK constants directly
	via links. Fixes #310871 (Nikos Kouremenos)
	Fix freedesktop links.

2005-07-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmenu.xml (detach): Fix typo. #310745 (Nikos Kouremenos)

2005-07-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml (set_activate_signal)
	(set_scroll_adjustments_signal): Add these new PyGTK 2.8 methods.
	Fixes #155679.

2005-07-07  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml (render_icon): detail param defaults to None.
	Fixes #309724 (Nikos Kouremenos)
