@@ -1,3 +1,9 @@
+2005-09-02  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gladexml.xml (set_custom_handler, bindtextdomain)
+	(textdomain, set_custom_widget): Add descriptions of these functions.
+	patch by Gian Mario Tagliaretti. Fixes #164078.
+
 2005-08-16  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkdialog.xml (add_buttons): Fix description of how button
